Fixed most of the upload photo modal css still broken on mobile but functional

--- a/src/app/components/shared/character-portrait-upload/character-portrait-upload.scss
+++ b/src/app/components/shared/character-portrait-upload/character-portrait-upload.scss
@@ -1,16 +1,20 @@
 .portrait-upload-dialog {
-  width: 550px;
-  max-width: 95vw;
+  max-width: 100%;
+  max-height: 100%;
   background-color: var(--gpSystemDarkerGrey);
   padding: 1.5rem;
 
+  @media (max-width: 780px) {
+    padding-bottom: 10rem;
+  }
+
   ::ng-deep .mat-mdc-dialog-container {
     background-color: var(--gpSystemDarkerGrey);
-    overflow: hidden !important;
+    overflow: auto !important;
     
     .mat-mdc-dialog-surface,
     .mdc-dialog__surface {
-      overflow: hidden !important;
+      overflow: auto !important;
     }
     
     .mat-mdc-dialog-content,
